--- a/models/zest110.html
+++ b/models/zest110.html
@@ -3,42 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Zest 110 | Tirumala TVS</title>
+    <title>TVS Scooty Zest 110 | Tirumala TVS</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
-            <div class="header-btn-group"><a href="../index.html#contact" class="btn-header">Get Quote</a></div>
+            <div class="header-btn-group">
+                <a href="../service.html" class="btn-header">Book Service</a>
+                <a href="../quotation.html" class="btn-header">Get Quotation</a>
+                <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
+            </div>
         </div>
-        <div class="nav-bar">
-            <div class="container"><ul class="nav-menu"><li class="nav-item"><a href="../index.html">Home</a></li><li class="nav-item"><a href="../models.html">Inventory</a></li><li class="nav-item"><a href="../index.html#contact">Contact</a></li></ul></div>
+        <div class="nav-bar" id="navMenu">
+            <div class="container">
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
+                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
-    <div class="model-hero">
-        <div class="hero-text-side">
-            <span class="model-tag">LIVE FULL. LIVE FREE.</span>
-            <h1 class="model-title">TVS Zest 110</h1>
-            <p style="font-size: 1.1rem; color: #555;">The fun and zesty ride. Best-in-class pickup and easy maneuverability.</p>
-            <div class="model-price">₹ 74,000* <br><span>(Ex-Showroom Price)</span></div>
-            <div style="display: flex; gap: 15px;">
-                <a href="../index.html#contact" class="btn btn-primary">Book Test Ride 📅</a>
-                <a href="https://wa.me/919964946512?text=Quote%20Zest" class="btn btn-whatsapp">WhatsApp 💬</a>
+    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
+        <div class="container" style="text-align: center;">
+            <h1 class="model-title" style="color: #1a3b8c;">TVS Scooty Zest 110</h1>
+            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 75,000*</p>
+        </div>
+    </div>
+
+    <div class="container pro-detail-section">
+        <div class="pro-detail-grid">
+            <div class="pro-text-side">
+                <h2>Overview</h2>
+                <p>The <strong>TVS Scooty Zest 110</strong> is designed for the free-spirited. It is the first 110cc scooter to conquer the Himalayas, proving its power and durability. Compact, peppy, and easy to handle.</p>
+
+                <h2>Engine & Efficiency</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Engine:</strong> 109.7 cc, ETFi Technology</li>
+                    <li><strong>Power:</strong> 7.81 PS @ 7500 rpm</li>
+                    <li><strong>Torque:</strong> 8.8 Nm @ 5500 rpm</li>
+                    <li><strong>Acceleration:</strong> 0-60 km/h in 11.1 seconds</li>
+                </ul>
+
+                <h2>Comfort Features</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Storage:</strong> 19 Litres Under-seat Storage</li>
+                    <li><strong>Handling:</strong> Best-in-class Agility</li>
+                    <li><strong>Charging:</strong> USB Smartphone Charger</li>
+                    <li><strong>Tyres:</strong> Tubeless Tyres with Anti-Skid</li>
+                </ul>
+
+                <div style="margin-top: 40px;">
+                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                </div>
+            </div>
+            <div class="pro-image-side">
+                <img src="../assets/zest.jpg" alt="TVS Zest" onerror="this.src='https://placehold.co/800x600?text=Zest+110+Image'">
             </div>
         </div>
-        <div class="hero-img-side"><img src="../assets/zest.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/800x600?text=Zest+110'"></div>
     </div>
 
-    <div class="spec-grid">
-        <div class="spec-box"><h3>109.7 cc</h3><p>Engine</p></div>
-        <div class="spec-box"><h3>Light</h3><p>Weight</p></div>
-        <div class="spec-box"><h3>19L</h3><p>Storage</p></div>
-        <div class="spec-box"><h3>USB</h3><p>Charger</p></div>
-    </div>
-
-    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
+    <footer>
+        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+    </footer>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
 </body>
 </html>
