--- a/models/radeon.html
+++ b/models/radeon.html
@@ -1,1 +1,78 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Radeon | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+
+    <header class="main-header">
+        <div class="container header-top">
+            <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
+            <div class="header-btn-group">
+                <a href="../service.html" class="btn-header">Book Service</a>
+                <a href="../quotation.html" class="btn-header">Get Quotation</a>
+                <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
+            </div>
+        </div>
+        <div class="nav-bar" id="navMenu">
+            <div class="container">
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
+                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
+        <div class="container" style="text-align: center;">
+            <h1 class="model-title" style="color: #1a3b8c;">TVS Radeon</h1>
+            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 62,000*</p>
+        </div>
+    </div>
+
+    <div class="container pro-detail-section">
+        <div class="pro-detail-grid">
+            <div class="pro-text-side">
+                <h2>Overview</h2>
+                <p>The <strong>TVS Radeon</strong> is a robust commuter motorcycle built for strength and comfort. With its distinct "Buland" metal build and comfortable long seat, it is designed for the everyday Indian rider.</p>
+
+                <h2>Engine & Efficiency</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Engine:</strong> 109.7 cc, Dura-Life Engine</li>
+                    <li><strong>Mileage:</strong> 65+ kmpl (Real World)</li>
+                    <li><strong>Technology:</strong> ETFi for 15% better mileage</li>
+                    <li><strong>Durability:</strong> Long-life Engine Warranty</li>
+                </ul>
+
+                <h2>Features</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Display:</strong> Reverse LCD Cluster with RTM (Real Time Mileage)</li>
+                    <li><strong>Seat:</strong> Largest Cushioned Seat in Segment</li>
+                    <li><strong>Safety:</strong> Synchronized Braking Technology (SBT)</li>
+                    <li><strong>Charging:</strong> USB Charger</li>
+                </ul>
+
+                <div style="margin-top: 40px;">
+                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                </div>
+            </div>
+            <div class="pro-image-side">
+                <img src="../assets/radeon.jpg" alt="TVS Radeon" onerror="this.src='https://placehold.co/800x600?text=Radeon+Image'">
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+    </footer>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+</body>
+</html>
