--- a/models/rr310.html
+++ b/models/rr310.html
@@ -40,7 +40,7 @@
         <div class="pro-detail-grid">
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>The <strong>TVS Apache RR 310</strong> is the flagship racing machine. Developed on the racetrack, it features a reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics for pure performance.</p>
+                <p>The <strong>TVS Apache RR 310</strong> is the flagship racing machine. Developed on the racetrack, it features a unique reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics for pure performance.</p>
 
                 <h2>Racing Performance</h2>
                 <ul class="pro-specs-list">
@@ -56,7 +56,7 @@
                     <li><strong>Display:</strong> 5-inch Vertical TFT Screen</li>
                     <li><strong>Modes:</strong> Track, Sport, Urban, Rain</li>
                     <li><strong>Tyres:</strong> Michelin Road 5 Tyres</li>
-                    <li><strong>Tech:</strong> Throttle-by-Wire & GTT (Glide Through Traffic)</li>
+                    <li><strong>Tech:</strong> Throttle-by-Wire & GTT</li>
                 </ul>
 
                 <div style="margin-top: 40px;">
