--- a/models/radeon.html
+++ b/models/radeon.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,7 +52,7 @@
 
                 <h2>Features</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Display:</strong> Reverse LCD Cluster with RTM (Real Time Mileage)</li>
+                    <li><strong>Display:</strong> Reverse LCD Cluster with RTM</li>
                     <li><strong>Seat:</strong> Largest Cushioned Seat in Segment</li>
                     <li><strong>Safety:</strong> Synchronized Braking Technology (SBT)</li>
                     <li><strong>Charging:</strong> USB Charger</li>
