--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                     <li class="nav-item dropdown">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/apache160.html">Apache RTR 160 4V</a></li>
-                            <li><a href="models/apache200.html">Apache RTR 200 4V</a></li>
+                            <li><a href="models/apache160.html">Apache RTR Series</a></li>
                             <li><a href="models/raider.html">Raider 125</a></li>
                             <li><a href="models/ronin.html">Ronin</a></li>
                         </ul>
@@ -110,11 +109,69 @@
 
     <section class="section-padding bg-light">
         <div class="container">
-            <div class="text-center section-header"><h2>New Arrivals</h2></div>
+            <div class="text-center section-header"><h2>Top Selling Vehicles</h2><p>Our customers' favorite rides.</p></div>
             <div class="grid-3" style="margin-top: 40px;">
-                <div class="card"><div class="card-img"><img src="assets/jupiter110.jpg" alt="Jupiter"></div><div class="card-info"><h3>Jupiter 110</h3><a href="models/jupiter113.html" class="btn btn-outline">View Specs</a></div></div>
-                <div class="card"><div class="card-img"><img src="assets/raider.jpg" alt="Raider"></div><div class="card-info"><h3>Raider 125</h3><a href="models/raider.html" class="btn btn-outline">View Specs</a></div></div>
-                <div class="card"><div class="card-img"><img src="assets/ronin.jpg" alt="Ronin"></div><div class="card-info"><h3>TVS Ronin</h3><a href="models/ronin.html" class="btn btn-outline">View Specs</a></div></div>
+                
+                <div class="card">
+                    <span class="badge">#1 SELLER</span>
+                    <div class="card-img"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
+                    <div class="card-info">
+                        <h3>New Jupiter 110</h3>
+                        <p style="color:#666; font-size:0.9rem; margin-bottom:15px;">Zyada Ka Fayda</p>
+                        <a href="models/jupiter113.html" class="btn btn-outline">View Specs</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <span class="badge">SPORTY</span>
+                    <div class="card-img"><img src="assets/ntorq.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
+                    <div class="card-info">
+                        <h3>TVS Ntorq 125</h3>
+                        <p style="color:#666; font-size:0.9rem; margin-bottom:15px;">Play Smart</p>
+                        <a href="models/ntorq125.html" class="btn btn-outline">View Specs</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <span class="badge">TRENDING</span>
+                    <div class="card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider+125'"></div>
+                    <div class="card-info">
+                        <h3>TVS Raider 125</h3>
+                        <p style="color:#666; font-size:0.9rem; margin-bottom:15px;">The Wicked Ride</p>
+                        <a href="models/raider.html" class="btn btn-outline">View Specs</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <span class="badge">ELECTRIC</span>
+                    <div class="card-img"><img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube+EV'"></div>
+                    <div class="card-info">
+                        <h3>TVS iQube</h3>
+                        <p style="color:#666; font-size:0.9rem; margin-bottom:15px;">Smartly Simple</p>
+                        <a href="models/iqube.html" class="btn btn-outline">View Specs</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <span class="badge">LIGHTWEIGHT</span>
+                    <div class="card-img"><img src="assets/zest.jpg" alt="Zest" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
+                    <div class="card-info">
+                        <h3>Scooty Zest 110</h3>
+                        <p style="color:#666; font-size:0.9rem; margin-bottom:15px;">Compact & Powerful</p>
+                        <a href="models/zest110.html" class="btn btn-outline">View Specs</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <span class="badge">PERFORMANCE</span>
+                    <div class="card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache+160'"></div>
+                    <div class="card-info">
+                        <h3>Apache RTR 160 4V</h3>
+                        <p style="color:#666; font-size:0.9rem; margin-bottom:15px;">Racing DNA Unleashed</p>
+                        <a href="models/apache160.html" class="btn btn-outline">View Specs</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -137,36 +194,12 @@
         <div class="container">
             <div class="text-center section-header"><h2>Awards & Recognition</h2><p>Excellence in every ride we deliver.</p></div>
             <div class="grid-3" style="margin-top: 40px;">
-                <div class="award-card">
-                    <span class="award-icon">🏆</span>
-                    <h3>IMOTY 2022 Winner</h3>
-                    <p>Indian Motorcycle of the Year - <strong>TVS Raider 125</strong></p>
-                </div>
-                <div class="award-card">
-                    <span class="award-icon">🥇</span>
-                    <h3>J.D. Power Award</h3>
-                    <p>Highest in Customer Satisfaction - Two Wheeler Service</p>
-                </div>
-                <div class="award-card">
-                    <span class="award-icon">⭐</span>
-                    <h3>Manufacturer of the Year</h3>
-                    <p>NDTV Car & Bike Awards - TVS Motor Company</p>
-                </div>
-                <div class="award-card">
-                    <span class="award-icon">🛵</span>
-                    <h3>Most Appealing Scooter</h3>
-                    <p>TVS Scooty Zest 110 - J.D. Power APEAL Award</p>
-                </div>
-                <div class="award-card">
-                    <span class="award-icon">🏍️</span>
-                    <h3>Bike of the Year 2021</h3>
-                    <p>Jagran Hi-Tech Awards - TVS Raider</p>
-                </div>
-                <div class="award-card">
-                    <span class="award-icon">✨</span>
-                    <h3>Initial Quality Leader</h3>
-                    <p>Highest Ranked Economy Motorcycle - TVS Star City+</p>
-                </div>
+                <div class="award-card"><span class="award-icon">🏆</span><h3>IMOTY 2022 Winner</h3><p>Indian Motorcycle of the Year - <strong>TVS Raider 125</strong></p></div>
+                <div class="award-card"><span class="award-icon">🥇</span><h3>J.D. Power Award</h3><p>Highest in Customer Satisfaction - Two Wheeler Service</p></div>
+                <div class="award-card"><span class="award-icon">⭐</span><h3>Manufacturer of the Year</h3><p>NDTV Car & Bike Awards - TVS Motor Company</p></div>
+                <div class="award-card"><span class="award-icon">🛵</span><h3>Most Appealing Scooter</h3><p>TVS Scooty Zest 110 - J.D. Power APEAL Award</p></div>
+                <div class="award-card"><span class="award-icon">🏍️</span><h3>Bike of the Year 2021</h3><p>Jagran Hi-Tech Awards - TVS Raider</p></div>
+                <div class="award-card"><span class="award-icon">✨</span><h3>Initial Quality Leader</h3><p>Highest Ranked Economy Motorcycle - TVS Star City+</p></div>
             </div>
         </div>
     </section>
