--- a/models/apache160.html
+++ b/models/apache160.html
@@ -29,6 +29,10 @@
         </div>
     </header>
 
+    <div class="container back-btn-wrapper">
+        <a href="../models.html" class="btn-back">← Back to All Models</a>
+    </div>
+
     <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
         <div class="container" style="text-align: center;">
             <h1 class="model-title" style="color: #1a3b8c;">TVS Apache RTR 160 4V</h1>
@@ -38,90 +42,51 @@
 
     <div class="container pro-detail-section">
         <div class="pro-detail-grid">
-            
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>
-                    The <strong>TVS Apache RTR 160 4V</strong> is the most powerful 160cc motorcycle in its segment. Born of Racing DNA, it features a 4-valve oil-cooled engine that delivers best-in-class performance. With SmartXonnect technology and 3 ride modes (Sport, Urban, Rain), it adapts to every road condition.
-                </p>
+                <p>The <strong>TVS Apache RTR 160 4V</strong> is the most powerful 160cc motorcycle in its segment. Born of Racing DNA, it features a 4-valve oil-cooled engine that delivers best-in-class performance. With SmartXonnect technology and 3 ride modes (Sport, Urban, Rain), it adapts to every road condition.</p>
 
                 <h2>Engine & Performance</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine Type:</strong> SI, 4-stroke, Oil-cooled, SOHC, Fuel Injection</li>
-                    <li><strong>Displacement:</strong> 159.7 cc</li>
+                    <li><strong>Engine:</strong> 159.7 cc, 4-stroke, Oil-cooled, Fuel Injection</li>
                     <li><strong>Max Power:</strong> 17.55 PS @ 9250 rpm (Sport Mode)</li>
                     <li><strong>Max Torque:</strong> 14.73 Nm @ 7250 rpm</li>
                     <li><strong>0-60 km/h:</strong> 4.8 seconds</li>
                     <li><strong>Top Speed:</strong> 114 km/h</li>
                 </ul>
 
-                <h2>Chassis, Brakes & Tyres</h2>
+                <h2>Chassis & Brakes</h2>
                 <ul class="pro-specs-list">
                     <li><strong>Frame:</strong> Double Cradle Split Synchro Stiff Frame</li>
-                    <li><strong>Front Suspension:</strong> Telescopic Forks (Showa Tuned)</li>
-                    <li><strong>Rear Suspension:</strong> Monoshock</li>
-                    <li><strong>Front Brake:</strong> 270mm Petal Disc (Single Channel ABS)</li>
-                    <li><strong>Rear Brake:</strong> 200mm Petal Disc / 130mm Drum</li>
-                    <li><strong>Front Tyre:</strong> 90/90-17 Tubeless</li>
-                    <li><strong>Rear Tyre:</strong> 130/70-17 Tubeless (Radial)</li>
+                    <li><strong>Suspension:</strong> Showa Tuned Telescopic Forks (Front) / Monoshock (Rear)</li>
+                    <li><strong>Brakes:</strong> 270mm Petal Disc (Front) / 200mm Disc or Drum (Rear)</li>
+                    <li><strong>Tyres:</strong> 90/90-17 (Front) / 130/70-17 Radial (Rear)</li>
                 </ul>
 
-                <h2>Dimensions & Electricals</h2>
+                <h2>Dimensions & Features</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Kerb Weight:</strong> 144 kg (Disc) / 146 kg (Drum)</li>
-                    <li><strong>Ground Clearance:</strong> 180 mm</li>
-                    <li><strong>Fuel Tank Capacity:</strong> 12 Litres</li>
-                    <li><strong>Headlamp:</strong> All-New LED Headlamp with DRL</li>
-                    <li><strong>Console:</strong> Fully Digital with Bluetooth Connectivity</li>
+                    <li><strong>Kerb Weight:</strong> 144 kg</li>
+                    <li><strong>Fuel Tank:</strong> 12 Litres</li>
+                    <li><strong>Lights:</strong> All-New LED Headlamp with DRL</li>
+                    <li><strong>Connectivity:</strong> SmartXonnect with Turn-by-Turn Navigation</li>
                 </ul>
 
-                <div style="margin-top: 40px; margin-bottom: 20px;">
+                <div style="margin-top: 40px;">
                     <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
                     <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
                 </div>
             </div>
-
             <div class="pro-image-side">
-                <img src="../assets/apache160.jpg" alt="Apache 160 4V Side Profile" onerror="this.src='https://placehold.co/800x600?text=Apache+160+Image'">
-                
-                <div style="margin-top: 30px; display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
-                    <div style="background: #f9f9f9; padding: 20px; border-radius: 8px; text-align: center;">
-                        <h4 style="font-family:'Oswald'; margin-bottom:5px;">Ride Modes</h4>
-                        <p style="font-size:0.9rem; color:#666;">Rain | Urban | Sport</p>
-                    </div>
-                    <div style="background: #f9f9f9; padding: 20px; border-radius: 8px; text-align: center;">
-                        <h4 style="font-family:'Oswald'; margin-bottom:5px;">SmartXonnect</h4>
-                        <p style="font-size:0.9rem; color:#666;">Call/SMS Alerts & Nav</p>
-                    </div>
-                </div>
+                <img src="../assets/apache160.jpg" alt="Apache 160 4V" onerror="this.src='https://placehold.co/800x600?text=Apache+160+Image'">
             </div>
-
         </div>
     </div>
 
     <footer>
-        <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div><div class="footer-contact-text">Sales: +91 99649 46512</div><div class="footer-contact-text" style="font-size:0.9em; opacity:0.9;">Service: +91 99649 46511</div></div></div>
-            </div>
-        </div>
-        <div class="container text-center" style="padding: 20px 0; color: #666;">
-            <p>© 2025 Tirumala TVS. All rights reserved.</p>
-        </div>
+        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
-
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" class="instagram-float" target="_blank">📸</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-
-    <script>
-        window.addEventListener('scroll', function() {
-            var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } 
-            else { scrollBtn.classList.remove('visible'); }
-        });
-    </script>
-
+    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
