--- a/models/apache200.html
+++ b/models/apache200.html
@@ -29,6 +29,10 @@
         </div>
     </header>
 
+    <div class="container back-btn-wrapper">
+        <a href="../models.html" class="btn-back">← Back to All Models</a>
+    </div>
+
     <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
         <div class="container" style="text-align: center;">
             <h1 class="model-title" style="color: #1a3b8c;">Apache RTR 200 4V</h1>
@@ -40,11 +44,11 @@
         <div class="pro-detail-grid">
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>The <strong>Apache RTR 200 4V</strong> is the ultimate street fighter. It brings segment-first features like Ride Modes and Adjustable Suspension, making it a track-ready machine for the road.</p>
+                <p>The <strong>Apache RTR 200 4V</strong> is the ultimate street fighter. It brings segment-first features like adjustable suspension and levers, making it a track-ready machine for the road.</p>
 
                 <h2>Engine & Performance</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 197.75 cc, 4-valve, oil-cooled</li>
+                    <li><strong>Engine:</strong> 197.75 cc, 4-valve, Oil-cooled</li>
                     <li><strong>Max Power:</strong> 20.82 PS @ 9000 rpm</li>
                     <li><strong>Max Torque:</strong> 17.25 Nm @ 7250 rpm</li>
                     <li><strong>0-60 km/h:</strong> 3.9 seconds</li>
@@ -74,5 +78,7 @@
         <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
+    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
