--- a/models/rr310.html
+++ b/models/rr310.html
@@ -29,6 +29,10 @@
         </div>
     </header>
 
+    <div class="container back-btn-wrapper">
+        <a href="../models.html" class="btn-back">← Back to All Models</a>
+    </div>
+
     <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
         <div class="container" style="text-align: center;">
             <h1 class="model-title" style="color: #1a3b8c;">TVS Apache RR 310</h1>
@@ -40,11 +44,11 @@
         <div class="pro-detail-grid">
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>The <strong>TVS Apache RR 310</strong> is the flagship racing machine. Developed on the racetrack, it features a unique reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics for pure performance.</p>
+                <p>The <strong>TVS Apache RR 310</strong> is our flagship racing machine. Developed on the racetrack, it features a unique reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics.</p>
 
                 <h2>Racing Performance</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 312.2 cc, liquid-cooled, DOHC, reverse inclined</li>
+                    <li><strong>Engine:</strong> 312.2 cc, Liquid-cooled, DOHC, Reverse Inclined</li>
                     <li><strong>Power:</strong> 34 PS @ 9700 rpm</li>
                     <li><strong>Torque:</strong> 27.3 Nm @ 7700 rpm</li>
                     <li><strong>0-60 km/h:</strong> 2.93 seconds</li>
@@ -56,7 +60,7 @@
                     <li><strong>Display:</strong> 5-inch Vertical TFT Screen</li>
                     <li><strong>Modes:</strong> Track, Sport, Urban, Rain</li>
                     <li><strong>Tyres:</strong> Michelin Road 5 Tyres</li>
-                    <li><strong>Tech:</strong> Throttle-by-Wire & GTT</li>
+                    <li><strong>Tech:</strong> Throttle-by-Wire & Glide Through Traffic (GTT)</li>
                 </ul>
 
                 <div style="margin-top: 40px;">
@@ -74,5 +78,7 @@
         <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
+    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
