--- a/models/ronin.html
+++ b/models/ronin.html
@@ -29,6 +29,10 @@
         </div>
     </header>
 
+    <div class="container back-btn-wrapper">
+        <a href="../models.html" class="btn-back">← Back to All Models</a>
+    </div>
+
     <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
         <div class="container" style="text-align: center;">
             <h1 class="model-title" style="color: #1a3b8c;">TVS Ronin</h1>
@@ -40,7 +44,7 @@
         <div class="pro-detail-grid">
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>The <strong>TVS Ronin</strong> is the industry's first 'Modern-Retro' motorcycle. Designed for the unscripted rider, it handles city streets and highway cruises with equal ease. It features a unique design language and premium tech.</p>
+                <p>The <strong>TVS Ronin</strong> is the industry's first 'Modern-Retro' motorcycle. Designed for the unscripted rider, it handles city streets and highway cruises with equal ease.</p>
 
                 <h2>Engine & Performance</h2>
                 <ul class="pro-specs-list">
@@ -74,5 +78,7 @@
         <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
+    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
