--- a/models/raider.html
+++ b/models/raider.html
@@ -29,6 +29,10 @@
         </div>
     </header>
 
+    <div class="container back-btn-wrapper">
+        <a href="../models.html" class="btn-back">← Back to All Models</a>
+    </div>
+
     <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
         <div class="container" style="text-align: center;">
             <h1 class="model-title" style="color: #1a3b8c;">TVS Raider 125</h1>
@@ -44,7 +48,7 @@
 
                 <h2>Engine & Specs</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 124.8 cc, 3-valve, air/oil-cooled</li>
+                    <li><strong>Engine:</strong> 124.8 cc, 3-valve, Air/Oil-cooled</li>
                     <li><strong>Power:</strong> 11.38 PS @ 7500 rpm</li>
                     <li><strong>Torque:</strong> 11.2 Nm @ 6000 rpm</li>
                     <li><strong>0-60 km/h:</strong> 5.9 seconds</li>
@@ -74,5 +78,7 @@
         <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
+    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
