--- a/models/jupiter113.html
+++ b/models/jupiter113.html
@@ -44,15 +44,14 @@
         <div class="pro-detail-grid">
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>The <strong>TVS Jupiter 110</strong> lives up to its promise of "Zyada Ka Fayda". It is India's most comfortable family scooter, offering best-in-class mileage, superior ride quality, and a host of convenient features for daily city commuting.</p>
+                <p>The <strong>TVS Jupiter 110</strong> lives up to its promise of "Zyada Ka Fayda". It is India's most comfortable family scooter, offering best-in-class mileage, superior ride quality, and a host of convenient features.</p>
 
                 <h2>Engine & Efficiency</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 109.7 cc, single-cylinder, CVTi</li>
+                    <li><strong>Engine:</strong> 109.7 cc, Single-cylinder, CVTi</li>
                     <li><strong>Power:</strong> 7.88 PS @ 7500 rpm</li>
                     <li><strong>Torque:</strong> 8.8 Nm @ 5500 rpm</li>
-                    <li><strong>Mileage:</strong> 15% higher fuel efficiency with ETFi</li>
-                    <li><strong>Transmission:</strong> CVT Automatic</li>
+                    <li><strong>Tech:</strong> ETFi Technology for 15% better mileage</li>
                 </ul>
 
                 <h2>Key Features</h2>
@@ -79,7 +78,6 @@
     </footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
-
     <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
