--- a/models/jupiter125.html
+++ b/models/jupiter125.html
@@ -29,6 +29,10 @@
         </div>
     </header>
 
+    <div class="container back-btn-wrapper">
+        <a href="../models.html" class="btn-back">← Back to All Models</a>
+    </div>
+
     <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
         <div class="container" style="text-align: center;">
             <h1 class="model-title" style="color: #1a3b8c;">TVS Jupiter 125</h1>
@@ -40,11 +44,11 @@
         <div class="pro-detail-grid">
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>The <strong>TVS Jupiter 125</strong> is truly "Zyada Se Bhi Zyada". It redefines the 125cc segment with industry-first features like the largest under-seat storage that fits two full-face helmets and progressive neo-masculine styling.</p>
+                <p>The <strong>TVS Jupiter 125</strong> is truly "Zyada Se Bhi Zyada". It redefines the 125cc segment with industry-first features like the largest under-seat storage that fits two full-face helmets.</p>
 
                 <h2>Engine & Performance</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 124.8 cc, single-cylinder, 2-valve</li>
+                    <li><strong>Engine:</strong> 124.8 cc, Single-cylinder, 2-valve</li>
                     <li><strong>Power:</strong> 8.15 PS @ 6500 rpm</li>
                     <li><strong>Torque:</strong> 10.5 Nm @ 4500 rpm</li>
                     <li><strong>Tech:</strong> IntelliGO (Auto Start/Stop)</li>
@@ -55,7 +59,6 @@
                     <li><strong>Storage:</strong> 33 Litres Under-seat (Fits 2 Helmets)</li>
                     <li><strong>Fuel Fill:</strong> Front External Fuel Fill</li>
                     <li><strong>Comfort:</strong> Longest Seat in Segment</li>
-                    <li><strong>Cluster:</strong> Semi-Digital with Mileage Indicator</li>
                     <li><strong>Suspension:</strong> 3-Step Adjustable Rear Gas Shocks</li>
                 </ul>
 
@@ -74,5 +77,7 @@
         <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
+    <script>window.addEventListener('scroll', function() { var s = document.querySelector('.scroll-top-btn'); if(window.scrollY > 300) s.classList.add('visible'); else s.classList.remove('visible'); });</script>
 </body>
 </html>
