--- a/models/rr310.html
+++ b/models/rr310.html
@@ -44,11 +44,11 @@
         <div class="pro-detail-grid">
             <div class="pro-text-side">
                 <h2>Overview</h2>
-                <p>The <strong>TVS Apache RR 310</strong> is our flagship racing machine. Developed on the racetrack, it features a unique reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics.</p>
+                <p>The <strong>TVS Apache RR 310</strong> is the flagship racing machine. Developed on the racetrack, it features a unique reverse-inclined engine, throttle-by-wire technology, and advanced aerodynamics.</p>
 
                 <h2>Racing Performance</h2>
                 <ul class="pro-specs-list">
-                    <li><strong>Engine:</strong> 312.2 cc, Liquid-cooled, DOHC, Reverse Inclined</li>
+                    <li><strong>Engine:</strong> 312.2 cc, Liquid-cooled, DOHC</li>
                     <li><strong>Power:</strong> 34 PS @ 9700 rpm</li>
                     <li><strong>Torque:</strong> 27.3 Nm @ 7700 rpm</li>
                     <li><strong>0-60 km/h:</strong> 2.93 seconds</li>
@@ -60,7 +60,7 @@
                     <li><strong>Display:</strong> 5-inch Vertical TFT Screen</li>
                     <li><strong>Modes:</strong> Track, Sport, Urban, Rain</li>
                     <li><strong>Tyres:</strong> Michelin Road 5 Tyres</li>
-                    <li><strong>Tech:</strong> Throttle-by-Wire & Glide Through Traffic (GTT)</li>
+                    <li><strong>Tech:</strong> Throttle-by-Wire & GTT</li>
                 </ul>
 
                 <div style="margin-top: 40px;">
