--- a/models/ntorq125.html
+++ b/models/ntorq125.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="pro-image-side">
-                <img src="../assets/ntorq.jpg" alt="TVS Ntorq 125" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125+Image'">
+                <img src="../assets/ntroq125.jpg" alt="TVS Ntorq 125" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125+Image'">
             </div>
         </div>
     </div>
