--- a/models.html
+++ b/models.html
@@ -81,7 +81,7 @@
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">SCOOTERS</h2>
                 <div class="grid-3">
                     <a href="models/jupiter113.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
+                        <div class="clean-card-img"><img src="assets/jupiter113.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
                         <div class="clean-card-content"><h3>New Jupiter 110</h3><div class="price">Starting at ₹ 73,000/-</div></div>
                     </a>
                     <a href="models/jupiter125.html" class="clean-card">
@@ -89,7 +89,7 @@
                         <div class="clean-card-content"><h3>Jupiter 125</h3><div class="price">Starting at ₹ 86,000/-</div></div>
                     </a>
                     <a href="models/ntorq125.html" class="clean-card">
-                        <div class="clean-card-img"><img src="assets/ntorq.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
+                        <div class="clean-card-img"><img src="assets/ntroq125.jpg" alt="Ntorq" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
                         <div class="clean-card-content"><h3>Ntorq 125</h3><div class="price">Starting at ₹ 84,000/-</div></div>
                     </a>
                     <a href="models/zest110.html" class="clean-card">
